New resource dialog: remove the package prefix for the type in the column type to get a narrower dialog.